[gd_scene load_steps=4 format=3 uid="uid://cobw3tu101vw8"]

[ext_resource type="Script" path="res://button_sequence/button_sequence.gd" id="1_ye2xd"]
[ext_resource type="Texture2D" uid="uid://ydhhumg5blho" path="res://assets/buttons/Button - PS Circle 1.png" id="2_8fwjc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn1mu"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ButtonSequence" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ye2xd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.486275, 0.486275, 0.486275, 0.588235)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sn1mu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="buttonBox" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/MarginContainer/buttonBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("2_8fwjc")
expand_mode = 1

[node name="timeLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 856.0
offset_top = 203.0
offset_right = 995.0
offset_bottom = 299.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 70
text = "2:30"

[node name="successLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 466.0
offset_top = 148.0
offset_right = 616.0
offset_bottom = 285.0
rotation = -0.188496
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 100
text = "fail"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 11.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
